--- a/templates/openshift.template
+++ b/templates/openshift.template
@@ -69,6 +69,8 @@ Metadata:
           - RedhatSubscriptionUserName
           - RedhatSubscriptionPassword
           - RedhatSubscriptionPoolID
+          - RedhatOrganizationID
+          - RedhatActivationKey
       - Label:
           default: AWS Quick Start Configuration
         Parameters:
@@ -112,6 +114,10 @@ Metadata:
         default: Red Hat Subscription Password
       RedhatSubscriptionPoolID:
         default: Red Hat Pool ID
+      RedhatOrganizationID:
+        default: Red Hat Organization ID
+      RedhatActivationKey:
+        default: Red Hat Activation Key
       OpenshiftContainerPlatformVersion:
         default: Openshift Container Platform Version
       MasterInstanceType:
@@ -248,6 +254,12 @@ Parameters:
     AllowedPattern: ^[^ \\']+$
   RedhatSubscriptionPoolID:
     Description: Enter Redhat RHN PoolID
+    Type: String
+  RedhatOrganizationID:
+    Description: Enter Redhat RHSM Organization ID
+    Type: String
+  RedhatActivationKey:
+    Description: Enter Redhat RHSM ActivationKey
     Type: String
   OpenshiftContainerPlatformVersion:
     Description: OpenShift version to deploy
@@ -599,7 +611,7 @@ Resources:
   RedhatSubscriptionSecret:
     Type: "AWS::SecretsManager::Secret"
     Properties:
-      SecretString: !Sub '{"user":"${RedhatSubscriptionUserName}","password":"${RedhatSubscriptionPassword}","poolid":"${RedhatSubscriptionPoolID}"}'
+      SecretString: !Sub '{"user":"${RedhatSubscriptionUserName}","password":"${RedhatSubscriptionPassword}","poolid":"${RedhatSubscriptionPoolID}","organizationId":"${RedhatOrganizationID}","activationKey":"${RedhatActivationKey}"}'
   RegistryBucket:
     Type: "AWS::S3::Bucket"
   Route53HostedSubdomainZone:
